# coursework-os

./: .gitignore  CMakeLists.txt  Makefile  Makefile-debian-ubuntu  README.md  build_servers.sh  finish_servers.sh
client/: App.cpp  App.h  client.cpp  client.h  julia_lab.sln  julia_lab.vcxproj  julia_lab.vcxproj.filters
first/: Makefile  backend.cpp  backend.h  swap_srv.cpp  swap_srv.h
first/backend/: CMakeLists.txt  backend.cpp  backend.h
first/log_srv/: Makefile  log_srv.cpp  log_srv.h
first/server/: backend.cpp  backend.h
get_swap_information_srv/: swap_srv.h
get_working_time_and_screen_size/: working_time_and_screensize_srv.cpp  working_time_and_screensize_srv.h
log/: log_srv.cpp  log_srv.h
log_srv/: Makefile  log_srv.cpp
second/: Makefile  backend.cpp  backend.h
second/log_srv/: CMakeLists.txt  log_srv.cpp  log_srv.h
second/server/: CMakeLists.txt  backend.cpp  backend.h
swap_size_srv/: backend.cpp  backend.h
